# LyricsDownloader

./: README.md  add_synced_lyrics.py  embed.py  get_song_metadata.py
python/: cover.py  get_song_metadata_and_create_lrc.py  requirements.txt
rust/: Cargo.toml  build.rs
rust/src/: main.rs
rust/wix/: License.rtf  main.wxs  wix.toml
