[package]
name = "LyricsDownloader"
version = "0.1.0"
edition = "2021"
authors = ["Your Name caberfan@gmail.com"]
license = "MIT"

[dependencies]
walkdir = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
lofty = "0.18.0"
rfd = "0.14"
eframe = "0.22"
egui = "0.22"
image = "0.25"
[build-dependencies]
embed-resource = "2"

[dependencies.winapi]
version = "0.3"
features = ["winuser", "windef"]

[[bin]]
name = "LyricsDownloader"
path = "src/main.rs"